--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html>
 
     <head>
-        <title>Hamilton | Hangman Game</title>
+        <title>Hamilton Hangman Game</title>
         <link rel="stylesheet" href="assets/css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
         
@@ -27,41 +27,35 @@
     </head>
 
     <body>
-        <!-- Bootstrap Container will hold everything -->
+        <!-- Bootstrap Container holds everything -->
         <div class="container">
+            <h2>Press Any Key to Get Started</h2>
             <br>
             <br>
             <!-- Game counters all held here. Panels are being used to hold various sections. -->
             <strong>Current Word</strong></h3>
-            <!-- This h3 section called wordblanks is what we'll be replacing with letters as the user guesses.
-            Pay particular attention to the id called ***wordblanks***. We'll be referencing this in the JavaScript. -->
+            <!-- Wordblanks section is what we'll be replacing with letters as the user guesses. -->
             <h3 id="word-blanks">_  </h3>
             <br>
             <br>
             <!-- Holds the list of Wrong User Guesses. -->
-            <!-- This span section called userGuesses is where we will be dumping the wrong guesses.
-            Pay particular attention to the id called ****userGuesses***. We'll be referencing this in the JavaScript. -->
+            <!-- UserGuesses is where th wrongGuesses will be. -->
             <strong>Letters Already Guessed: </strong> <span id="wrong-guesses"></span>
             <!-- Holds the Number of Wrong Guesses -->
             <br>
             <br>
-            <!-- This span called guessesLeft is where we will be dumping the number of guesses left.
-            Pay attention to the id called ****guessesLeft****. We'll be referencing this in the JavaScript. -->
+            <!-- GuessesLeft is where number of guesses left is. -->
             <strong>Number of Guesses Remaining: </strong> <span id="guesses-left">9</span>
             <br>
             <br>
-            <!-- Holds the number of Wins. -->
-            <!-- This span called winCounter is where we'll be dumping the number of wins.
-            Pay attention to the id called ****winCounter***. We'll be referencing this in the JavaScript. -->
+            <!-- Holds the number of Wins. winCounter is where the number of wins will be. -->
             <strong> Wins: </strong> <span id="win-counter">0</span>
             <!--Holds the number of Losses. -->
             <br>
             <br>
-            <!-- This span called winCounter is where we'll be dumping the number of wins.
-            Pay attention to the id called ****winCounter***. We'll be referencing this in the JavaScript. -->
+            <!-- winCounter is where the number of wins will be-->
             <strong>Losses: </strong> <span id="loss-counter">0</span>
-            <!-- Adds a link to the javascript file. Loaded at the bottom so it waits for the HTML content to display first.
-             If you put this at the top it will crash, because the HTML IDs won't exist yet.-->
+           
             <!--SCRIPTS-->
             <script src="assets/javascript/game.js"></script>
             <br>
